fabric/testdata/out/ing_fabric-demo-app-reject-http-route.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    metacontroller.k8s.io/last-applied-configuration: '{"apiVersion":"extensions/v1beta1","kind":"Ingress","metadata":{"annotations":{"zalando.org/aws-load-balancer-http2":"true","zalando.org/aws-load-balancer-ssl-policy":"ELBSecurityPolicy-FS-2018-06","zalando.org/skipper-routes":"PathSubtree(\"/\")
      \u0026\u0026 Header(\"X-Forwarded-Proto\", \"http\") -\u003e unverifiedAuditLog(\"sub\")
      -\u003e status(400) -\u003e inlineContent(\"{\\\"title\\\":\\\"Gateway Rejected\\\",\\\"status\\\":400,\\\"detail\\\":\\\"TLS
      is required\\\",\\\"type\\\":\\\"https://cloud.docs.zalando.net/howtos/ingress/#redirect-http-to-https\\\"}\")
      -\u003e \u003cshunt\u003e"},"labels":{"controller-uid":"1b09e061-d197-4ded-bf66-227551ae018c","deployment-id":"d-djq37m98ip2xqujdwbnxbucyp","pipeline-id":"l-siee3x8vnzbr7czzto12ofbji"},"name":"fabric-demo-app-reject-http-route","namespace":"default"},"spec":{"rules":[{"host":"fabric-demo-app.smart-product-platform-test.zalan.do","http":{"paths":[{"backend":{"serviceName":"fabric-demo-app","servicePort":"http"},"pathType":"ImplementationSpecific"}]}}]}}'
    zalando.org/aws-load-balancer-http2: "true"
    zalando.org/aws-load-balancer-ssl-policy: ELBSecurityPolicy-FS-2018-06
    zalando.org/skipper-routes: PathSubtree("/") && Header("X-Forwarded-Proto", "http")
      -> unverifiedAuditLog("sub") -> status(400) -> inlineContent("{\"title\":\"Gateway
      Rejected\",\"status\":400,\"detail\":\"TLS is required\",\"type\":\"https://cloud.docs.zalando.net/howtos/ingress/#redirect-http-to-https\"}")
      -> <shunt>
  creationTimestamp: "2020-07-09T13:30:00Z"
  generation: 1
  labels:
    controller-uid: 1b09e061-d197-4ded-bf66-227551ae018c
    deployment-id: d-djq37m98ip2xqujdwbnxbucyp
    pipeline-id: l-siee3x8vnzbr7czzto12ofbji
  name: fabric-demo-app-reject-http-route
  namespace: default
  ownerReferences:
  - apiVersion: zalando.org/v1
    blockOwnerDeletion: true
    controller: true
    kind: FabricGateway
    name: fabric-demo-app
    uid: 1b09e061-d197-4ded-bf66-227551ae018c
  resourceVersion: "1357488631"
  uid: 9c1fd94e-94d1-426b-99df-b0d193fa6dff
spec:
  rules:
  - host: fabric-demo-app.smart-product-platform-test.zalan.do
    http:
      paths:
      - backend:
          service:
            name: fabric-demo-app
            port:
              name: http
        pathType: ImplementationSpecific
status:
  loadBalancer:
    ingress:
    - hostname: kube-ing-lb-vejw9uwox1cj-898356825914b821.elb.eu-central-1.amazonaws.com
